--- a/README.mkd
+++ b/README.mkd
@@ -15,12 +15,12 @@ Software
 * Arduino environment (http://www.arduino.cc/en/Main/Software)
 * Python 2.6
 * Python packages to pip install
-** pyserial (run arduino)
-** appscript (make facetime call)
-** tornado (serve site)
-** pymongo (talk to database)
-** python-dateutil==1.5 (parse date string)
-** simplejson (json encode responses)
-** twilio (send text messages)
+    - pyserial (run arduino)
+    - appscript (make facetime call)
+    - tornado (serve site)
+    - pymongo (talk to database)
+    - python-dateutil==1.5 (parse date string)
+    - simplejson (json encode responses)
+    - twilio (send text messages)
 * Twilio (http://www.twilio.com/)
 * MongoDB 2.0.0 (http://www.mongodb.org/downloads)
